--- a/control.ipynb
+++ b/control.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For python modules,\n",
+    "# Use in dev repository"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +39,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files collected from ../ to ./module\n"
+      "Files collected from ./ to ./flatten_module\n"
      ]
     }
    ],
    "source": [
     "collect_files(\n",
     "    '../',\n",
-    "    './module',\n",
-    "    includes=['/development/', '/src/', '/test/', '/htmlcov/', 'pyproject'],\n",
-    "    excludes=['__pycache__', 'egg-info', 'git', 'css', 'json', 'png', 'js'],\n",
-    "    path_editor=my_editor\n",
+    "    './flatten_module',\n",
+    "    includes=['src/', 'test/'],\n",
+    "    excludes=['egg-info', 'cache'],\n",
+    "    post_path_editor=my_editor\n",
     ")"
    ]
   }
